RCHIMA : PATCH : Updated the swagger
